# project-protest

./: README.md  police-data.csv  police_budget_by_city.csv  pyproject.toml
project_protests/: .gitignore  Crowd Estimates December 2022 - Tally.csv  Crowd Estimates February 2021 - Tally.csv  Crowd Estimates June 2022 - Tally.csv  Crowd Estimates March 2021 - Tally.csv  Crowd Estimates November 2022 - Tally.csv  Crowd Estimates September 2022 - Tally.csv  __main__.py  pyproject.toml  query_params.py
project_protests/clean_data/: clean_data.py  collecting_news  collecting_news.py  compile_news_data.py  news_compiled.csv  nyt_0.json  nyt_100.json  nyt_102.json  nyt_105.json  nyt_106.json  nyt_108.json  nyt_11.json  nyt_111.json  nyt_113.json  nyt_114.json  nyt_116.json  nyt_121.json  nyt_125.json  nyt_126.json  nyt_127.json  nyt_13.json  nyt_130.json  nyt_135.json  nyt_138.json  nyt_142.json  nyt_144.json  nyt_151.json  nyt_156.json  nyt_157.json  nyt_158.json  nyt_16.json  nyt_160.json  nyt_162.json  nyt_164.json  nyt_165.json  nyt_167.json  nyt_168.json  nyt_169.json  nyt_17.json  nyt_170.json  (+60 more)
project_protests/count_data/: Crowd Estimates April 2021 - Tally.csv  Crowd Estimates August 2017 - Tally.csv  Crowd Estimates August 2022 - Tally.csv  Crowd Estimates Dec 2017 - Tally.csv  Crowd Estimates December 2019 - Tally.csv  Crowd Estimates February 2019 - Tally.csv  Crowd Estimates February 2022 - Tally.csv  Crowd Estimates January 2018 - Tally.csv  Crowd Estimates January 2019 - Tally.csv  Crowd Estimates January 2023 - Tally.csv  Crowd Estimates July 2017 - Tally.csv  Crowd Estimates July 2019 - Tally.csv  Crowd Estimates July 2020 - Tally.csv  March 2017 - Tally.csv  (+19 more)
(+1240 files in other folders)
