[tool.poetry]
name = "project-protests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_protests"}]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.2"
ipython = "^8.9.0"
cssselect = "^1.2.0"
requests = "^2.28.2"
pytest = "^7.2.1"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
