[tool.poetry]
name = "project_protests"
version = "0.1.0"
description = ""
authors = ["Josemaria Macedo - JP Martinez - Monica Nimmagadda - Lisette Solis"]
readme = "README.md"
packages = [{include = "project_protests"}]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.2"
ipython = "^8.9.0"
cssselect = "^1.2.0"
requests = "^2.28.2"
pytest = "^7.2.1"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
afinn = "^0.1"
dash = "^2.8.1"
pip = "^23.0.1"
install = "^1.3.5"
dash-renderer = "0.13.0"
bs4 = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
